--- a/data/com.github.marbetschar.boxes.appdata.xml.in
+++ b/data/com.github.marbetschar.boxes.appdata.xml.in
@@ -5,7 +5,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Boxes</name>
-  <summary>Use lightweight containers just like full blown virtual machines</summary>
+  <summary>Use lightweight containers just like any virtual machine</summary>
   <description>
     <p>A quick summary of your app's main selling points and features. Just a couple sentences per paragraph is best.</p>
   </description>
