--- a/src/meson.build
+++ b/src/meson.build
@@ -2,5 +2,6 @@
 sources = files (
     'Application.vala',
     'Widgets/ContainerLogoBox.vala',
+    'Widgets/ContainerListBox.vala',
     'Widgets/ContainerListBoxRow.vala'
 )
