--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,7 @@
 # Listing files to compile
 sources = files (
     'Application.vala',
+    'MainWindow.vala',
     'Widgets/ContainerLogoBox.vala',
     'Widgets/ContainerListBox.vala',
     'Widgets/ContainerListBoxRow.vala'
