--- a/data/meson.build
+++ b/data/meson.build
@@ -12,6 +12,11 @@ foreach i : icon_sizes
     )
 endforeach
 
+install_data(
+    meson.project_name() + '.gschema.xml',
+    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'glib-2.0', 'schemas')
+)
+
 # Translate and install our .desktop file so the Applications Menu will see it
 i18n.merge_file (
     input: meson.project_name () + '.desktop.in',
