First steps towards graphical assistant

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,6 +2,7 @@
 sources = files (
     'Application.vala',
     'MainWindow.vala',
+    'AddContainerAssistant.vala',
     'Widgets/ContainerLogoBox.vala',
     'Widgets/ContainerListBox.vala',
     'Widgets/ContainerListBoxRow.vala'
