--- a/meson.build
+++ b/meson.build
@@ -28,15 +28,19 @@ asresources = gnome.compile_resources(
 # Listing dependencies
 dependencies = [
     dependency ('glib-2.0'),
-    dependency ('gtk+-3.0')
+    dependency ('gtk+-3.0'),
+    dependency ('gio-2.0'),
+    dependency ('gio-unix-2.0'),
 ]
 
+subdir ('lxd')
 subdir ('src')
 
 # Executable
 executable (
     meson.project_name (),
     asresources,
+    lxd_sources,
     sources,
     dependencies: dependencies,
     install: true
