--- a/meson.build
+++ b/meson.build
@@ -29,8 +29,7 @@ asresources = gnome.compile_resources(
 dependencies = [
     dependency ('glib-2.0'),
     dependency ('gtk+-3.0'),
-    dependency ('gio-2.0'),
-    dependency ('gio-unix-2.0'),
+    dependency ('json-glib-1.0'),
 ]
 
 subdir ('lxd')
