Baby steps towards container management...

--- a/lxd/meson.build
+++ b/lxd/meson.build
@@ -1,4 +1,10 @@
 # Listing files to compile
 lxd_sources = files (
-    'Client.vala'
+    'Client.vala',
+    'model/Image.vala',
+    'model/Instance.vala',
+    'model/OperatingSystem.vala',
+    'model/Profile.vala',
+    'model/Properties.vala',
+    'model/Source.vala'
 )
