Trying to fetch and serialize image json

--- a/lxd/meson.build
+++ b/lxd/meson.build
@@ -1,10 +1,9 @@
 # Listing files to compile
 lxd_sources = files (
     'Client.vala',
-    'model/Image.vala',
-    'model/Instance.vala',
-    'model/OperatingSystem.vala',
-    'model/Profile.vala',
-    'model/Properties.vala',
-    'model/Source.vala'
+    'Image.vala',
+    'ImageFile.vala',
+    'Instance.vala',
+    'Properties.vala',
+    'Source.vala'
 )
