Sneaking up to adding containers

--- a/lxd/meson.build
+++ b/lxd/meson.build
@@ -4,6 +4,5 @@ lxd_sources = files (
     'Image.vala',
     'Instance.vala',
     'Object.vala',
-    'PublicImageCache.vala',
-    'Source.vala',
+    'ImageStore.vala'
 )
