Creating Containers Works!

--- a/lxd/meson.build
+++ b/lxd/meson.build
@@ -2,7 +2,8 @@
 lxd_sources = files (
     'Client.vala',
     'Image.vala',
+    'ImageStore.vala',
     'Instance.vala',
     'Object.vala',
-    'ImageStore.vala'
+    'Operation.vala'
 )
