--- a/data/com.github.marbetschar.boxes.appdata.xml.in
+++ b/data/com.github.marbetschar.boxes.appdata.xml.in
@@ -5,19 +5,54 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Boxes</name>
-  <summary>Use lightweight containers just like any virtual machine</summary>
+  <summary>Containers just like Virtual Machines</summary>
   <description>
-    <p>A quick summary of your app's main selling points and features. Just a couple sentences per paragraph is best.</p>
+    <p>
+        Use all benefits of virtual machines - but in lightweight containers.
+    </p>
+    <p>
+        Features:
+    </p>
+    <ul>
+        <li>Create/destroy containers</li>
+        <li>Start/stop containers</li>
+        <li>Open container shell</li>
+    </ul>
+    <p>
+        <strong>PLEASE NOTE:</strong> Until <a href="https://github.com/marbetschar/boxes/issues/7">issue #7</a>
+        is fixed, Boxes expects LXD to be installed via apt and initialized on the host system.
+        To do so, please execute the following commands in your terminal:
+    </p>
+    <pre>
+sudo apt install lxd
+
+# use default values everywhere:
+sudo lxd init
+    </pre>
   </description>
+  <custom>
+    <value key="x-appcenter-color-primary">#a56de2</value>
+    <value key="x-appcenter-color-primary-text">rgb(255, 255, 255)</value>
+    <value key="x-appcenter-suggested-price">29</value>
+  </custom>
   <provides>
     <binary>com.github.marbetschar.boxes</binary>
   </provides>
-  <developer_name>marbetschar</developer_name>
-  <url type="homepage">https://marco.betschart.name</url>
+  <releases>
+    <release version="1.0.0" date="2020-05-06">
+      <description>
+        <p>Initial release in elementary AppCenter! 🎉️</p>
+      </description>
+    </release>
+  </releases>
+  <developer_name>Marco Betschart</developer_name>
+  <url type="homepage">https://github.com/marbetschar/boxes</url>
   <url type="bugtracker">https://github.com/marbetschar/boxes/issues</url>
   <url type="help">https://github.com/marbetschar/boxes/issues</url>
+  <update_contact>elementary-boxes@marco.betschart.name</update_contact>
   <screenshots>
     <screenshot type="default">
+      <image>https://raw.githubusercontent.com/marbetschar/boxes/master/data/screenshots/App.png</image>
     </screenshot>
   </screenshots>
   <content_rating type="oars-1.1">
@@ -49,7 +84,4 @@
     <content_attribute id="money-purchasing">none</content_attribute>
     <content_attribute id="money-gambling">none</content_attribute>
   </content_rating>
-  <releases>
-    <rel8ease version="0.0.1" date="2020-01-01"/>
-  </releases>
 </component>
