Show confirmation dialog when deleting an instance (fixes #6)

--- a/meson.build
+++ b/meson.build
@@ -32,7 +32,8 @@ core_deps = [
     dependency ('json-glib-1.0'),
 ]
 ui_deps = [
-    dependency ('gtk+-3.0')
+    dependency ('gtk+-3.0'),
+    dependency ('granite')
 ]
 
 subdir ('lxd')
