Added explanation for tins

--- a/data/com.github.marbetschar.tins.appdata.xml.in
+++ b/data/com.github.marbetschar.tins.appdata.xml.in
@@ -10,6 +10,10 @@
     <p>
         Use all benefits of virtual machines - but in lightweight containers.
     </p>
+    <blockquote>
+        <strong>Tin Box:</strong> a tinplate container - often used to package breath mints.
+        In some cultures, these boxes are referred to as "tins".
+    </blockquote>
     <p>
         Features:
     </p>
