--- a/data/com.github.marbetschar.tins.appdata.xml.in
+++ b/data/com.github.marbetschar.tins.appdata.xml.in
@@ -11,7 +11,7 @@
         Use all benefits of virtual machines - but in lightweight containers.
     </p>
     <blockquote>
-        a tinplate container - often used to package breath mints.
+        <strong>Tins:</strong> a tinplate container - often used to package breath mints.
         In some cultures, these boxes are referred to as "tins".
     </blockquote>
     <p>
