Graphics Support Profile Handling

--- a/lxd/meson.build
+++ b/lxd/meson.build
@@ -1,9 +1,11 @@
 # Listing files to compile
 lxd_sources = files (
     'Client.vala',
+    'Device.vala',
     'Image.vala',
     'ImageStore.vala',
     'Instance.vala',
     'Object.vala',
-    'Operation.vala'
+    'Operation.vala',
+    'Profile.vala'
 )
