First super rough, running X11 using Xephyr!

--- a/lxd/meson.build
+++ b/lxd/meson.build
@@ -4,6 +4,7 @@ lxd_sources = files (
     'Image.vala',
     'ImageStore.vala',
     'Instance.vala',
+    'LXD.vala',
     'Object.vala',
     'Operation.vala',
     'Profile.vala'
