Better... but far from good

--- a/data/lxd/cloud-configs/tins-default.yml
+++ b/data/lxd/cloud-configs/tins-default.yml
@@ -6,9 +6,9 @@ users:
   - name: $USER
     groups: [sudo,wheel]
     sudo: ALL=(ALL) NOPASSWD:ALL
-package_update: true
 packages:
   - sudo
 runcmd:
   - groupmod --gid $GID $USER
   - usermod --gid $GID --uid $UID $USER
+  - echo '$USER:$USER' | chpasswd
