--- a/data/lxd/cloud-configs/tins-x11-ubuntu-gnome.yml
+++ b/data/lxd/cloud-configs/tins-x11-ubuntu-gnome.yml
@@ -11,7 +11,7 @@ packages:
   - x11-apps
   - mesa-utils
   - pulseaudio
-  - kubuntu-desktop
+  - ubuntu-desktop
   - lightdm
   - lightdm-gtk-greeter
 runcmd:
