--- a/data/lxd/cloud-configs/tins-x11.yml
+++ b/data/lxd/cloud-configs/tins-x11.yml
@@ -13,6 +13,5 @@ packages:
   - pulseaudio
 runcmd:
   - groupmod --gid $GID $USER
-  - usermod --gid $GID --uid $UID $USER
-  - echo '$USER:$USER' | chpasswd
+  - usermod --gid $GID --uid $UID --password $(openssl passwd -1 $USER) $USER
   - sed -i "s/; enable-shm = yes/enable-shm = no/g" /etc/pulse/client.conf
