--- a/data/lxd/cloud-configs/tins-default.yml
+++ b/data/lxd/cloud-configs/tins-default.yml
@@ -16,5 +16,6 @@ users:
 packages:
   - sudo
 runcmd:
+  - usermod --uid $UID $USER
   - groupmod --gid $GID $USER
-  - usermod --gid $GID --uid $UID --password $(openssl passwd -1 $USER) $USER
+  - usermod --gid $GID $USER
